Leer descripcion
Se implemento:
-Logica de roles
-TallerService con logica de inscripcion, cupos y listas de espera
-Validaciones de roles en tallercontroller
-Rutas para inscribir y cancelar inscripciones a talleres
-TallerServiceTest para verificar el flujo de un taller con cupos llenos